--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -7,9 +7,9 @@ url="http://github.com/tcobbs/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
 #Qt4.x
-depends=('qt4' 'boost-libs' 'libpng' 'libjpeg-turbo' 'mesa-libgl' 'boost')
+depends=('qt4' 'libpng' 'libjpeg-turbo' 'mesa-libgl')
 #Qt5.x
-#depends=('qt5-base' 'qt5-tools' 'boost-libs' 'libpng' 'libjpeg-turbo' 'mesa-libgl' 'boost')
+#depends=('qt5-base' 'qt5-tools' 'libpng' 'libjpeg-turbo' 'mesa-libgl')
 makedepends=('cmake' 'kdelibs' 'automoc4' 'glu' 'phonon-qt4-gstreamer')
 conflicts=()
 replaces=()
