--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -18,15 +18,15 @@ source=("ldview-git.tar.gz")
 md5sums=(SKIP)
 
 build() {
-  cd ${srcdir}/ldview-git/QT
+  test -d ${srcdir}/ldview-git/QT && cd ${srcdir}/ldview-git/QT || cd ..
   if test "$CARCH" == x86_64; then
     PLATFORM=linux-g++-64
   else
     PLATFORM=linux-g++-32
   fi
-  if [ -x /usr/bin/qmake ] ; then qmake LIBS+=-lboost_system -spec $PLATFORM ; lrelease LDView.pro ;
-  elif [ -x /usr/bin/qmake-qt4 ] ; then qmake-qt4 LIBS+=-lboost_system -spec $PLATFORM ; lrelease-qt4 LDView.pro ;
-  elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 LIBS+=-lboost_system -spec $PLATFORM ; lrelease-qt5 LDView.pro ; fi
+  if [ -x /usr/bin/qmake ] ; then qmake -spec $PLATFORM ; lrelease LDView.pro ;
+  elif [ -x /usr/bin/qmake-qt4 ] ; then qmake-qt4 -spec $PLATFORM ; lrelease-qt4 LDView.pro ;
+  elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 -spec $PLATFORM ; lrelease-qt5 LDView.pro ; fi
   make "TESTING=-I ../gl2ps -I ../3rdParty/tinyxml"
   cd kde
   if [ -d build ]; then rm -rf build ; fi
@@ -35,12 +35,12 @@ build() {
   if cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ; then
     make
   fi
-  cd ${srcdir}/ldview-git/OSMesa
+  #cd ${srcdir}/ldview-git/OSMesa
   #make
 }
  
 package() {
-  cd "${srcdir}/ldview-git/QT"
+  test -d ${srcdir}/ldview-git/QT && cd ${srcdir}/ldview-git/QT || cd ..
   make INSTALL_ROOT="${pkgdir}" install
 }
 
