--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ image:
 - ubuntu1804
 
 install:
-- sh: sudo apt install -qq libqt4-dev libqt4-opengl-dev libpng-dev libjpeg-dev libtinyxml-dev
+- sh: sudo apt install -y -qq libqt4-dev libqt4-opengl-dev libpng-dev libjpeg-dev libtinyxml-dev
 
 build_script:
 - sh: cd QT;qmake -spec linux-g++-64;make
