--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,10 +11,10 @@ image:
 - ubuntu1804
 
 install:
-- sh: sudo apt install -y -qq libqt4-dev libqt4-opengl-dev libpng-dev libjpeg-dev libtinyxml-dev
+- sh: sudo apt install -y -qq libqt4-dev libqt4-opengl-dev libpng-dev libjpeg-dev libtinyxml-dev cmake kdelibs5-dev libgl1-mesa-dev libosmesa6-dev
 
 build_script:
-- sh: cd QT;qmake -spec linux-g++-64;make
+- sh: cd QT;./makedeb
 - cmd: msbuild "C:\projects\ldview\LDView.vcxproj" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
 skip_commits:
