--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -10,7 +10,7 @@ license=('GPL')
 depends=('qt4' 'libpng' 'libjpeg-turbo' 'mesa-libgl')
 #Qt5.x
 #depends=('qt5-base' 'qt5-tools' 'libpng' 'libjpeg-turbo' 'mesa-libgl')
-makedepends=('ca-certificates' 'kdelibs' 'automoc4' 'glu' 'phonon-qt4-gstreamer')
+makedepends=('ca-certificates' 'kdelibs4support' 'glu')
 conflicts=()
 replaces=()
 backup=()
