--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -24,9 +24,12 @@ build() {
   else
     PLATFORM=linux-g++-32
   fi
-  if [ -x /usr/bin/qmake ] ; then qmake -spec $PLATFORM ; lrelease-qt4 LDView.pro ;
-  elif [ -x /usr/bin/qmake-qt4 ] ; then qmake-qt4 -spec $PLATFORM ; lrelease-qt4 LDView.pro ;
-  elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 -spec $PLATFORM ; lrelease-qt5 LDView.pro ; fi
+  if   [ -x /usr/bin/qmake ]     ; then qmake     -spec $PLATFORM ;
+  elif [ -x /usr/bin/qmake-qt4 ] ; then qmake-qt4 -spec $PLATFORM ;
+  elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 -spec $PLATFORM ; fi
+  if   [ -x /usr/bin/lrelease ]     ; then lrelease     LDView.pro ;
+  elif [ -x /usr/bin/lrelease-qt4 ] ; then lrelease-qt4 LDView.pro ;
+  elif [ -x /usr/bin/lrelease-qt5 ] ; then lrelease-qt5 LDView.pro ; fi
   make "TESTING=-I ../gl2ps -I ../3rdParty/tinyxml"
   cd kde
   if [ -d build ]; then rm -rf build ; fi
