--- a/.travis.yml
+++ b/.travis.yml
@@ -28,37 +28,37 @@ matrix:
     env:
      - QT_BASE=56
   - os: linux
-    dist: trusty
+    dist: xenial
     sudo: required
     compiler: gcc
     env:
      - QT_BASE=57
   - os: linux
-    dist: trusty
+    dist: xenial
     sudo: required
     compiler: gcc
     env:
      - QT_BASE=58
   - os: linux
-    dist: trusty
+    dist: xenial
     sudo: required
     compiler: gcc
     env:
      - QT_BASE=59
   - os: linux
-    dist: trusty
+    dist: xenial
     sudo: required
     compiler: gcc
     env:
      - QT_BASE=510
   - os: linux
-    dist: trusty
+    dist: xenial
     sudo: required
     compiler: gcc
     env:
      - JOB="Ubuntu packaging test"
   - os: linux
-    dist: trusty
+    dist: xenial
     sudo: required
     services: docker
     env:
@@ -75,10 +75,11 @@ before_install:
   - if [[ "$QT_BASE" = "54"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt542-trusty -y; fi
   - if [[ "$QT_BASE" = "55"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt551-trusty -y; fi
   - if [[ "$QT_BASE" = "56"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt563-trusty -y; fi
-  - if [[ "$QT_BASE" = "57"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt571-trusty -y; fi
-  - if [[ "$QT_BASE" = "58"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt58-trusty  -y; fi
-  - if [[ "$QT_BASE" = "59"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt596-trusty -y; fi
-  - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y; fi
+  - if [[ "$QT_BASE" = "57"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt571-xenial -y; fi
+  - if [[ "$QT_BASE" = "58"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt58-xenial  -y; fi
+  - if [[ "$QT_BASE" = "59"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt596-xenial -y; fi
+  - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-xenial -y; fi
+  - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.11.2-xenial -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get update -qq;
     fi
@@ -96,6 +97,7 @@ install:
   - if [[ "$QT_BASE" = "58"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt58base; source /opt/qt58/bin/qt58-env.sh; fi 
   - if [[ "$QT_BASE" = "59"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt59base; source /opt/qt59/bin/qt59-env.sh; fi 
   - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt510base; source /opt/qt510/bin/qt510-env.sh; fi 
+  - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt510base; source /opt/qt511/bin/qt511-env.sh; fi 
   
 script:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
