--- a/.travis.yml
+++ b/.travis.yml
@@ -99,7 +99,7 @@ install:
   - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt510base; source /opt/qt510/bin/qt510-env.sh; fi 
   - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt510base; source /opt/qt511/bin/qt511-env.sh; fi 
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
-      sudo apt-get install -qq libgl1-mesa-dev;
+      sudo apt-get install -qq libglu1-mesa-dev;
     fi
   
 script:
