--- a/.travis.yml
+++ b/.travis.yml
@@ -124,7 +124,8 @@ script:
           docker run ldview-$DOCKER ;
         fi;
       fi
-    else
+    fi
+    if [ "$TRAVIS_OS_NAME" = "osx" ]; then
       cd MacOSX/LDView;
       xcodebuild;
     fi
