--- a/.travis.yml
+++ b/.travis.yml
@@ -15,30 +15,30 @@ matrix:
     compiler: gcc
     env:
      - QT_BASE=48
-  - os: linux
-    dist: trusty
-    sudo: required
-    compiler: gcc
-    env:
-     - QT_BASE=55
-  - os: linux
-    dist: trusty
-    sudo: required
-    compiler: gcc
-    env:
-     - QT_BASE=56
-  - os: linux
-    dist: xenial
-    sudo: required
-    compiler: gcc
-    env:
-     - QT_BASE=57
-  - os: linux
-    dist: xenial
-    sudo: required
-    compiler: gcc
-    env:
-     - QT_BASE=58
+#  - os: linux
+#    dist: trusty
+#    sudo: required
+#    compiler: gcc
+#    env:
+#     - QT_BASE=55
+#  - os: linux
+#    dist: trusty
+#    sudo: required
+#    compiler: gcc
+#    env:
+#     - QT_BASE=56
+#  - os: linux
+#    dist: xenial
+#    sudo: required
+#    compiler: gcc
+#    env:
+#     - QT_BASE=57
+#  - os: linux
+#    dist: xenial
+#    sudo: required
+#    compiler: gcc
+#    env:
+#     - QT_BASE=58
   - os: linux
     dist: xenial
     sudo: required
@@ -96,7 +96,7 @@ before_install:
   - if [[ "$QT_BASE" = "59"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt597-xenial -y; fi
   - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-xenial -y; fi
   - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.11.3-xenial -y; fi
-  - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-xenial -y; fi
+  - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.1-xenial -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get update -qq;
     fi
