--- a/QT/debian/control
+++ b/QT/debian/control
@@ -5,7 +5,7 @@ Priority: optional
 #Qt4.x
 Build-Depends: debhelper (>= 4.1.6), libqt4-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, libpng-dev, libjpeg-dev, libosmesa6-dev
 #Qt5.x
-#Build-Depends: debhelper (>= 4.1.6), qtbase5-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, libpng-dev, libjpeg-dev
+#Build-Depends: debhelper (>= 4.1.6), qtbase5-dev, qt5-qmake, libqt5opengl5-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, libpng-dev, libjpeg-dev, libosmesa6-dev, libtinyxml-dev, libgl2ps-dev
 Homepage: http://tcobbs.github.io/ldview
 Standards-Version: 3.9.8
 
