--- a/QT/docker/Dockerfile-mageia_7
+++ b/QT/docker/Dockerfile-mageia_7
@@ -1,13 +1,8 @@
 FROM mageia:7
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
-RUN dnf install -y git rpm-build rpmlint dnf-plugins-core
-RUN git clone https://github.com/tcobbs/ldview
-RUN dnf builddep -y ldview/QT/LDView.spec
-RUN cd ldview/QT ; \
-	cp -f LDView.spec LDView-qt5.spec ;\
-	sed 's/define qt5 0/define qt5 1/' -i LDView-qt5.spec ;\
-         dnf builddep -y LDView-qt5.spec
+ADD install-devel-pacages.sh /
+RUN ./install-devel-pacages.sh
 
 VOLUME /mnt/lego
 ENV PATH /usr/lib64/qt4/bin:$PATH
