--- a/QT/docker/Dockerfile-debian_9
+++ b/QT/docker/Dockerfile-debian_9
@@ -1,10 +1,8 @@
 FROM debian:9
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
-RUN apt-get update ; apt-get install -y git lintian build-essential debhelper ccache lsb-release
-RUN git clone https://github.com/tcobbs/ldview
-#RUN cd ldview/QT;mk-build-deps -t "apt-get -y" -r -i debian/control
-RUN apt-get install -y `grep Build-Depends ldview/QT/debian/control | cut -d: -f2| sed 's/(.*)//g' | tr -d ,` libtinyxml-dev libgl2ps-dev
+ADD install-devel-pacages.sh /
+RUN ./install-devel-pacages.sh
 
 VOLUME /mnt/lego
 CMD cd ldview/QT ; \
