Docker: optimize rpm creation

--- a/QT/docker/Dockerfile-centos_6
+++ b/QT/docker/Dockerfile-centos_6
@@ -8,12 +8,4 @@ VOLUME /mnt/lego
 CMD yum update -x kernel* -y; \
 	cd ldview/QT ;\
 	git pull; \
-	rpmbuild -bb LDView.spec ;\
-	for r in /root/rpm*/RPMS/*/ldview*.rpm /usr/src/redhat/RPMS/*/ldview*.rpm /usr/src/packages/RPMS/*/ldview*.rpm ; do \
-		if [ -f $r ] ; then \
-			if [ -d /mnt/lego ] ; then \
-				cp -f $r /mnt/lego ; \
-			fi ; \
-			rpmlint $r ; \
-		fi; \
-	done
+	./makerpm
