--- a/QT/docker/Dockerfile-fedora_30
+++ b/QT/docker/Dockerfile-fedora_30
@@ -8,17 +8,4 @@ VOLUME /mnt/lego
 CMD dnf update -x kernel* -y; \
 	cd ldview/QT ; \
 	git pull; \
-	rpmbuild -bb LDView.spec ; \
-	cp -f LDView.spec LDView-qt5.spec ;\
-	sed 's/define qt5 0/define qt5 1/' -i LDView-qt5.spec ;\
-	rpmbuild -bb LDView-qt5.spec ;\
-#	export LDVDEV32=YES ;\
-#	rpmbuild --target=i686 -bb LDView.spec ; \
-	for r in /root/rpm*/RPMS/*/ldview*.rpm /usr/src/redhat/RPMS/*/ldview*.rpm /usr/src/packages/RPMS/*/ldview*.rpm ; do \
-		if [ -f $r ] ; then \
-			if [ -d /mnt/lego ] ; then \
-				cp -f $r /mnt/lego ; \
-			fi ; \
-			rpmlint $r ; \
-		fi; \
-	done
+	./makerpm
