--- a/QT/docker/Dockerfile-opensuse_15.1
+++ b/QT/docker/Dockerfile-opensuse_15.1
@@ -6,15 +6,4 @@ RUN ./install-devel-packages.sh
 VOLUME /mnt/lego
 CMD cd ldview/QT ; \
 	git pull; \
-	rpmbuild -bb LDView.spec ; \
-	cp -f LDView.spec LDView-qt5.spec ;\
-	sed 's/define qt5 0/define qt5 1/' -i LDView-qt5.spec ;\
-	rpmbuild -bb LDView-qt5.spec ;\
-	for r in /root/rpm*/RPMS/*/ldview*.rpm /usr/src/redhat/RPMS/*/ldview*.rpm /usr/src/packages/RPMS/*/ldview*.rpm ; do \
-		if [ -f $r ] ; then \
-			if [ -d /mnt/lego ] ; then \
-				cp -f $r /mnt/lego ; \
-			fi ; \
-			rpmlint $r ; \
-		fi; \
-	done
+	./makerpm
