--- a/QT/docker/Dockerfile-arch
+++ b/QT/docker/Dockerfile-arch
@@ -9,4 +9,5 @@ CMD cd ldview/QT ; \
 	chmod o+w -R .. ;\
 	sed -i '/qt4/s/^depends/#depends/' PKGBUILD ;\
 	sed -i '/qt5/s/^#depends/depends/' PKGBUILD ;\
-	sudo -u nobody makepkg -ef
+	sudo -u nobody makepkg -ef ;\
+	cp -f ldview*pkg.tar.gz /mnt/lego
