--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -6,11 +6,9 @@ pkgdesc="A real-time 3D viewer for displaying LDraw models"
 url="http://github.com/tcobbs/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
-#Qt4.x
-depends=('qt4' 'libpng' 'libjpeg-turbo' 'mesa-libgl')
 #Qt5.x
-#depends=('qt5-base' 'qt5-tools' 'libpng' 'libjpeg-turbo' 'mesa-libgl')
-makedepends=('ca-certificates' 'kdelibs4support' 'glu' 'iptables')
+depends=('qt5-base' 'qt5-tools' 'libpng' 'libjpeg-turbo' 'mesa-libgl' 'gl2ps')
+makedepends=('ca-certificates' 'kdelibs4support' 'glu' 'iptables' 'gcc' 'make')
 conflicts=()
 replaces=()
 backup=()
