--- a/.travis.yml
+++ b/.travis.yml
@@ -52,25 +52,25 @@ matrix:
     env:
      - QT_BASE=510
   - os: linux
-    dist: xenial
+    dist: bionic
     sudo: required
     compiler: gcc
     env:
      - QT_BASE=511
   - os: linux
-    dist: xenial
+    dist: bionic
     sudo: required
     compiler: gcc
     env:
      - QT_BASE=512
   - os: linux
-    dist: xenial
+    dist: bionic
     sudo: required
     compiler: gcc
     env:
      - JOB="Ubuntu packaging test"
   - os: linux
-    dist: xenial
+    dist: bionic
     sudo: required
     services: docker
     env:
@@ -95,8 +95,8 @@ before_install:
   - if [[ "$QT_BASE" = "58"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt58-xenial  -y; fi
   - if [[ "$QT_BASE" = "59"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt597-xenial -y; fi
   - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-xenial -y; fi
-  - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.11.3-xenial -y; fi
-  - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.3-xenial -y; fi
+  - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.11.3-bionic -y; fi
+  - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.3-bionic -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get update -qq;
     fi
