--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,9 @@ matrix:
   - os: osx
     compiler: clang
     osx_image: xcode9.4
+  - os: osx
+    compiler: clang
+    osx_image: xcode11
   - os: windows
     env:
      - JOB="Visual Studio 2017 Build Tools"
