--- a/.travis.yml
+++ b/.travis.yml
@@ -45,24 +45,30 @@ matrix:
     compiler: gcc
     env:
      - QT_BASE=59
-  - os: linux
-    dist: xenial
-    sudo: required
-    compiler: gcc
-    env:
-     - QT_BASE=510
-  - os: linux
-    dist: bionic
-    sudo: required
-    compiler: gcc
-    env:
-     - QT_BASE=511
+#  - os: linux
+#    dist: xenial
+#    sudo: required
+#    compiler: gcc
+#    env:
+#     - QT_BASE=510
+#  - os: linux
+#    dist: bionic
+#    sudo: required
+#    compiler: gcc
+#    env:
+#     - QT_BASE=511
   - os: linux
     dist: bionic
     sudo: required
     compiler: gcc
     env:
      - QT_BASE=512
+  - os: linux
+    dist: bionic
+    sudo: required
+    compiler: gcc
+    env:
+     - QT_BASE=513
   - os: linux
     dist: bionic
     sudo: required
@@ -100,6 +106,7 @@ before_install:
   - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-xenial -y; fi
   - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.11.3-bionic -y; fi
   - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.6-bionic -y; fi
+  - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.13.2-bionic -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get update -qq;
     fi
@@ -119,6 +126,7 @@ install:
   - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt510base; source /opt/qt510/bin/qt510-env.sh; fi 
   - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt511base; source /opt/qt511/bin/qt511-env.sh; fi
   - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt512base; source /opt/qt512/bin/qt512-env.sh; fi
+  - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt513base; source /opt/qt513/bin/qt513-env.sh; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get install -qq libglu1-mesa-dev libosmesa6-dev libgl2ps-dev libtinyxml-dev;
       if [[ "$QT_BASE" = "" && "$DOCKER" = "" ]] ; then
