--- a/.travis.yml
+++ b/.travis.yml
@@ -74,6 +74,12 @@ matrix:
     sudo: required
     compiler: gcc
     env:
+     - QT_BASE=514
+  - os: linux
+    dist: bionic
+    sudo: required
+    compiler: gcc
+    env:
      - JOB="Ubuntu packaging test"
   - os: linux
     dist: bionic
@@ -107,6 +113,7 @@ before_install:
   - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.11.3-bionic -y; fi
   - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.6-bionic -y; fi
   - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.13.2-bionic -y; fi
+  - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.14.0-bionic -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get update -qq;
     fi
@@ -127,6 +134,7 @@ install:
   - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt511base; source /opt/qt511/bin/qt511-env.sh; fi
   - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt512base; source /opt/qt512/bin/qt512-env.sh; fi
   - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt513base; source /opt/qt513/bin/qt513-env.sh; fi
+  - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt514base; source /opt/qt514/bin/qt514-env.sh; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get install -qq libglu1-mesa-dev libosmesa6-dev libgl2ps-dev libtinyxml-dev;
       if [[ "$QT_BASE" = "" && "$DOCKER" = "" ]] ; then
