--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,11 @@ jobs:
     env:
      - QT_BASE=514
   - os: linux
+    dist: focal
+    compiler: gcc
+    env:
+     - QT_BASE=515
+  - os: linux
     dist: bionic
     compiler: gcc
     env:
@@ -101,6 +106,7 @@ before_install:
   - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.8-bionic -y; fi
   - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.13.2-bionic -y; fi
   - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.14.2-bionic -y; fi
+  - if [[ "$QT_BASE" = "515" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.15.0-$TRAVIS_DIST -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get update -qq;
     fi
@@ -122,6 +128,7 @@ install:
   - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt512base; source /opt/qt512/bin/qt512-env.sh; fi
   - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt513base; source /opt/qt513/bin/qt513-env.sh; fi
   - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt514base; source /opt/qt514/bin/qt514-env.sh; fi
+  - if [[ "$QT_BASE" = "515" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt515base; source /opt/qt515/bin/qt515-env.sh; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get install -qq libglu1-mesa-dev libosmesa6-dev libgl2ps-dev libtinyxml-dev;
       if [[ "$QT_BASE" = "" && "$DOCKER" = "" ]] ; then
