--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
 #    env:
 #     - QT_BASE=511
   - os: linux
-    dist: bionic
+    dist: focal
     compiler: gcc
     env:
      - QT_BASE=512
@@ -60,7 +60,7 @@ jobs:
     env:
      - QT_BASE=513
   - os: linux
-    dist: bionic
+    dist: focal
     compiler: gcc
     env:
      - QT_BASE=514
@@ -103,7 +103,7 @@ before_install:
   - if [[ "$QT_BASE" = "59"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt597-$TRAVIS_DIST -y; fi
   - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-$TRAVIS_DIST -y; fi
   - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.11.3-$TRAVIS_DIST -y; fi
-  - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.8-$TRAVIS_DIST -y; fi
+  - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.9-$TRAVIS_DIST -y; fi
   - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.13.2-$TRAVIS_DIST -y; fi
   - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.14.2-$TRAVIS_DIST -y; fi
   - if [[ "$QT_BASE" = "515" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.15.0-$TRAVIS_DIST -y; fi
