--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 4.3.0.{build}
+version: 4.4.0.{build}
 configuration: Release
 platform: x64
 build:
@@ -9,13 +9,13 @@ image:
 - Visual Studio 2015
 - Visual Studio 2017
 - Visual Studio 2019
-- ubuntu1804
+- ubuntu2004
 
 install:
-- sh: sudo apt-get update; sudo apt-get install -y -qq libqt4-dev libqt4-opengl-dev libpng-dev libjpeg-dev libtinyxml-dev libgl2ps-dev qtbase5-dev qt5-qmake libqt5opengl5-dev cmake kdelibs5-dev libgl1-mesa-dev libosmesa6-dev build-essential debhelper lintian fakeroot extra-cmake-modules libkf5kio-dev libkf5kdelibs4support5-bin
+- sh: sudo apt-get update; sudo apt-get install -y -qq libpng-dev libjpeg-dev libtinyxml-dev libgl2ps-dev qtbase5-dev qt5-qmake libqt5opengl5-dev cmake libgl1-mesa-dev libosmesa6-dev build-essential debhelper lintian fakeroot extra-cmake-modules libkf5kio-dev libkf5kdelibs4support5-bin
 
 build_script:
-- sh: cd QT;./makedeb
+- sh: cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; ./makedeb -qt5
 - cmd: msbuild "C:\projects\ldview\LDView.vcxproj" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
 skip_commits:
