--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,9 +16,8 @@ install:
 
 build_script:
 - sh: cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; ./makedeb -qt5
-- cmd: msbuild "C:\projects\ldview\LDView.vcxproj" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-- cmd: msbuild "C:\projects\ldview\Launcher\Launcher.vcxproj" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-- cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+- cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+- cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /p:Platform=win32 /t:Launcher /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
 skip_commits:
   files:
