--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,8 @@ install:
 build_script:
 - sh: cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; ./makedeb -qt5
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-- cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /p:Platform=win32 /t:Launcher /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+- cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+- cmd: "C:\Program Files (x86)\Inno Setup 6\iscc.exe" C:\projects\ldview\LDView64.iss
 
 skip_commits:
   files:
