--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,11 @@ install:
 build_script:
 - sh: cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; ./makedeb -qt5
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+- cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /t:Launcher /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-- cmd: cd "\Program Files (x86)\Inno Setup 6"
+- cmd: if exist "\Program Files (x86)\Inno Setup 6\iscc.exe" cd "\Program Files (x86)\Inno Setup 6"
+- cmd: if exist "\Program Files (x86)\Inno Setup 5\iscc.exe" cd "\Program Files (x86)\Inno Setup 5"
 - cmd: iscc.exe C:\projects\ldview\LDView64.iss
 
 skip_commits:
