--- a/.travis.yml
+++ b/.travis.yml
@@ -128,7 +128,7 @@ install:
   - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt512base; source /opt/qt512/bin/qt512-env.sh; fi
   - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt513base; source /opt/qt513/bin/qt513-env.sh; fi
   - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt514base; source /opt/qt514/bin/qt514-env.sh; fi
-  - if [[ "$QT_BASE" = "515" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt515base; source /opt/qt515/bin/qt515-env.sh; fi
+  - if [[ "$QT_BASE" = "515" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get install -qq libglu1-mesa-dev libosmesa6-dev libgl2ps-dev libtinyxml-dev;
       if [[ "$QT_BASE" = "" && "$DOCKER" = "" ]] ; then
