--- a/.travis.yml
+++ b/.travis.yml
@@ -114,20 +114,20 @@ before_install:
 install:
   - if [[ "$QT_BASE" = ""    && "$TRAVIS_OS_NAME" = "linux" && "$DOCKER" = "" ]]; then sudo apt-get install -qq lintian kdelibs5-dev debhelper cmake libosmesa6-dev libtinyxml-dev fakeroot qt5-qmake qtbase5-dev libqt4-opengl-dev libqt5opengl5-dev; fi
   - if [[ "$QT_BASE" = "48"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq opt-qt4-qmake opt-qt4-dev-tools; source /opt/qt-4.8/bin/qt-4.8-env.sh; fi
-  - if [[ "$QT_BASE" = "51"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt51base; source /opt/qt51/bin/qt51-env.sh; fi
-  - if [[ "$QT_BASE" = "52"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt52base; source /opt/qt52/bin/qt52-env.sh; fi
-  - if [[ "$QT_BASE" = "53"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt53base; source /opt/qt53/bin/qt53-env.sh; fi
-  - if [[ "$QT_BASE" = "54"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt54base; source /opt/qt54/bin/qt54-env.sh; fi
-  - if [[ "$QT_BASE" = "55"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt55base; source /opt/qt55/bin/qt55-env.sh; fi
-  - if [[ "$QT_BASE" = "56"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt56base; source /opt/qt56/bin/qt56-env.sh; fi
-  - if [[ "$QT_BASE" = "57"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt57base; source /opt/qt57/bin/qt57-env.sh; fi
-  - if [[ "$QT_BASE" = "58"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt58base; source /opt/qt58/bin/qt58-env.sh; fi 
-  - if [[ "$QT_BASE" = "59"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt59base; source /opt/qt59/bin/qt59-env.sh; fi 
-  - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt510base; source /opt/qt510/bin/qt510-env.sh; fi 
-  - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt511base; source /opt/qt511/bin/qt511-env.sh; fi
-  - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt512base; source /opt/qt512/bin/qt512-env.sh; fi
-  - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt513base; source /opt/qt513/bin/qt513-env.sh; fi
-  - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt514base; source /opt/qt514/bin/qt514-env.sh; fi
+  - if [[ "$QT_BASE" = "51"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "52"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "53"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "54"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "55"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "56"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "57"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "58"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi 
+  - if [[ "$QT_BASE" = "59"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi 
+  - if [[ "$QT_BASE" = "510" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi 
+  - if [[ "$QT_BASE" = "511" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "512" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
   - if [[ "$QT_BASE" = "515" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get install -qq libglu1-mesa-dev libosmesa6-dev libgl2ps-dev libtinyxml-dev;
