Docker: Fedora 33 fix

--- a/QT/docker/Dockerfile-fedora_33
+++ b/QT/docker/Dockerfile-fedora_33
@@ -8,4 +8,5 @@ VOLUME /mnt/lego
 CMD dnf update -x kernel* -y; \
 	cd ldview/QT ; \
 	git pull; \
+	mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS} ;\
 	./makerpm
