Alpine linux update

--- a/QT/docker/Dockerfile-alpine_3.12
+++ b/QT/docker/Dockerfile-alpine_3.12
@@ -8,6 +8,6 @@ VOLUME /mnt/lego
 
 CMD cd ldview/QT ; \
 	git pull; \
-	cp PKGBUILD APKGBUILD ;\
-	sudo -u nobody abuild
+	abuild-keygen -a -n ;\
+	abuild -F
 
