--- a/QT/APKBUILD
+++ b/QT/APKBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Peter Bartfai <pbartfai[at]stardust[dot]hu>
+# Maintainer: Peter Bartfai <pbartfai@stardust.hu>
 pkgname=ldview
 pkgver=4.4b3
 pkgrel=1
@@ -7,12 +7,11 @@ url="http://github.com/tcobbs/ldview"
 arch="all"
 license="GPL"
 #Qt5.x
-depends="qt5-base qt5-tools libpng libjpeg-turbo mesa-libgl gl2ps"
-makedepends="kdelibs4support glu gcc make cmake extra-cmake-modules"
-source="ldview-git.tar.gz"
+depends="qt5-qtbase libpng libjpeg-turbo"
+makedepends="qt5-qtbase-dev glu-dev libjpeg-turbo-dev make cmake extra-cmake-modules"
+#source="ldview-git.tar.gz"
 
 build() {
-  test -d ${srcdir}/ldview-git/QT && cd ${srcdir}/ldview-git/QT || cd ..
   if test "$CARCH" == x86_64; then
     PLATFORM=linux-g++-64
   else
@@ -30,11 +29,9 @@ build() {
   if cmake -DCMAKE_INSTALL_PREFIX=`kf5-config --prefix` .. ; then
     make
   fi
-  cd ../../../OSMesa
-  make all
 }
  
-package_ldview() {
+package() {
   test -d ${srcdir}/ldview-git/QT && cd ${srcdir}/ldview-git/QT || cd ..
   make INSTALL_ROOT="${pkgdir}" install
   cd kde5/build
