Alpine linux update

--- a/QT/docker/Dockerfile-alpine_3.12
+++ b/QT/docker/Dockerfile-alpine_3.12
@@ -9,5 +9,6 @@ VOLUME /mnt/lego
 CMD cd ldview/QT ; \
 	git pull; \
 	abuild-keygen -a -n ;\
-	abuild -F
+	abuild -F ; \
+	cp -f /root/packages/ldview/*/ldview*.apk /mnt/lego
 
