--- a/QT/APKBUILD
+++ b/QT/APKBUILD
@@ -10,6 +10,7 @@ license="GPL"
 depends="qt5-qtbase libpng libjpeg-turbo"
 makedepends="qt5-qtbase-dev qt5-qttools-dev glu-dev libjpeg-turbo-dev make cmake extra-cmake-modules"
 #source="ldview-git.tar.gz"
+subpackages="$pkgname-osmesa"
 
 build() {
   if test "$CARCH" == x86_64; then
@@ -29,6 +30,8 @@ build() {
   if cmake -DCMAKE_INSTALL_PREFIX=`kf5-config --prefix` .. ; then
     make
   fi
+  cd ../../../OSMesa
+  make
 }
  
 package() {
@@ -38,3 +41,7 @@ package() {
 #  make DESTDIR="${pkgdir}" install
 }
 
+osmesa() {
+  cd ../OSMesa
+  make PREFIX="${pkgdir}-osmesa" install
+}
